(rough) recovery from data loss in STEP 3

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "359fa3b1-7211-4470-b228-ef20d9058251",
+   "id": "527d3240",
    "metadata": {
     "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true",
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fa2dd4-48f5-4423-b981-345a363c7345",
+   "id": "e53ef7a4-de0a-4f56-99b5-bb66dcf99aa4",
    "metadata": {},
    "source": [
     "## Community Support\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de4d680a-2ce3-4377-a1be-69c87debd3aa",
+   "id": "359fa3b1-7211-4470-b228-ef20d9058251",
    "metadata": {},
    "source": [
     "## Hardware\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b620b86d-9d3e-4060-84e5-2a34eb13a9a1",
+   "id": "f6f47d59-b750-4606-af07-e20dba5a5320",
    "metadata": {
     "tags": []
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f47d59-b750-4606-af07-e20dba5a5320",
+   "id": "f1a0206e",
    "metadata": {},
    "source": [
     "### Programming IDEs\n",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5281a06d-7e00-4b22-a778-cfd80dd7ae07",
+   "id": "5afbfd84",
    "metadata": {},
    "source": [
     "#### [Visual Studio Code (VSC)](https://en.wikipedia.org/wiki/Visual_Studio_Code)\n",
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeef738b-2c88-4f7f-b19e-90c44b8d48d7",
+   "id": "6aeb57ac",
    "metadata": {},
    "source": [
     "#### [JupyterLab](https://en.wikipedia.org/wiki/Project_Jupyter#Jupyter_Notebook)\n",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bccc0eab-c1c3-48a1-90b1-18da419e4c02",
+   "id": "4c195049",
    "metadata": {},
    "source": [
     "#### [RStudio](https://en.wikipedia.org/wiki/RStudio)\n",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ce9e71e-3481-4c7a-8034-8291f72a2c81",
+   "id": "00458f90",
    "metadata": {},
    "source": [
     "#### [GNU Octave (GUI)](https://en.wikipedia.org/wiki/GNU_Octave#User_interfaces)\n",
@@ -6785,8 +6785,9 @@
     "\n",
     "However, since the AI or ML world is so huge and impossible for a ML novice to overlook, a brief description of the **relationship between AI and ML** is given in the following sections. Furthermore, a **taxonomy** of the different **learning types** is presented by also providing some example algorithms.\n",
     "\n",
-    "## Short overview of the AI world and its ML algorithms\n",
+    "## Short overview of the AI world\n",
     "\n",
+    "<!--\n",
     "### Relationship between AI, ML and others\n",
     "\n",
     "**@TODO:**\n",
@@ -6797,19 +6798,46 @@
     "In the **science world**, the term **artificial intelligence (AI)** refers to machines and systems that are capable of performing tasks that are characteristic of human intelligence.\n",
     "\n",
     "In the **business world**, on the other hand, AI typically refers to mechanisms that perceive environmental factors and take autonomous actions. This is seen as an opportunity to achieve **predefined goals** with maximum success - without human intervention. Ultimately, this view is a mapping of **input information** to controlled **output actions** of a system. This expectation of AI-driven systems is thus hardly higher than what can be expected from today's modern automation systems.\n",
+    "-->\n",
     "\n",
-    "**Machine Learning (ML)**, on the other hand, addresses the mathematical models and algorithms that enable a computer system to recognize (new) correlations in huge amounts of sample data from various sources by inferring them independently. For scientists, machine learning is a subset of AI.\n",
+    "Die Geschichte der Künstlichen Intelligenz (KI) mit der [Dartmouth Conference](https://en.wikipedia.org/wiki/Dartmouth_workshop) im Sommer 1956 als ihre Geburtsstunde ist durch mehrere aufeinanderfolgende Hype- und Tiefphasen (sog. [KI-Winter](https://de.wikipedia.org/wiki/KI-Winter)) geprägt. In den Hype-Phasen konnten durch die KI-Forscher viele neue Erkenntnisse gewonnen und interessante Anwendungsgebiete erschlossen werden. Allerdings gab es immer wieder Zeiten, in denen die nachweisbaren Erfolge weit hinter den vorher erweckten (überzogenen) Erwartungen zurückblieben. Die Folge waren ein nachlassendes Interesse an KI-Forschung und damit einhergehende drastische Kürzungen der Forschungsbudgets. Als potentielle Ursache für die oftmals kursierenden überzogenen Erwartungen an KI-Technologien können die hohe mediale Aufmerksamkeit in Kombination mit oftmals vagen und wenig trennscharfen Definitionen von Künstliche Intelligenz gesehen werden.\n",
     "\n",
-    "The umbrella term AI covers a very large research area. It includes a number of techniques that enable computers to learn independently and solve complex problems:\n",
+    "Durch den Erkenntniszuwachs aus der KI-Forschung sowie dem Erschließen neuer Anwendungsgebiete sind die Begriffe und insbesondere Definitionen in den letzten Jahrzehnten einer ständigen Änderung unterworfen.\n",
     "\n",
+    "Die aktuell veröffentlichte Norm [ISO/IEC 22989:2022-07](https://webstore.iec.ch/publication/77839) wurde KI durch das SC 42 -Artificial Intelligence des JTC1 wie folgt definiert <cite data-cite=\"ISO_IEC_22989_2022-07\">ISO/IEC 22989:2022-07</cite>\n",
+    "\n",
+    "Der Hauptteil der Definition beschreibt, was KI machen (soll):\n",
+    "\n",
+    "> [An **artificial intelligence system** is an] engineered system that generates outputs such as content, forecasts, recommendations or decisions for a given set of human-defined objectives.\n",
+    "\n",
+    "In einer Anmerkung werden die dafür notwendigen Techniken beschrieben:\n",
+    "\n",
+    "> [..] The engineered system can use various techniques and approaches related to artificial intelligence to develop a **model** to represent data, **knowledge**, processes, etc. which can be used to conduct **tasks**.\n",
+    "\n",
+    "knowledge: abstracted information about objects, events, concepts or rules, their relationships and properties, organized for goal-oriented systematic use\n",
+    "\n",
+    "model: physical, mathematical or otherwise logical representation of a system, entity, phenomenon, process or data\n",
+    "\n",
+    "task: action required to achieve a specific goal\n",
+    "\n",
+    "\n",
+    "**Machine Learning (ML)** as a subset of AI, on the other hand, addresses the mathematical models and algorithms that enable a computer system to recognize (new) correlations in huge amounts of sample data from various sources by inferring them independently.\n",
+    "\n",
+    "The umbrella term AI covers a very large research area. It includes a number of techniques, like:\n",
+    "\n",
+    "- Supervised and Unsupervised Learning,\n",
+    "- Reinforcement Learning and\n",
+    "- Genetic Algorithms\n",
+    "\n",
+    "that enable computers to learn independently and solve complex problems in the field of, e.g.:\n",
+    " \n",
     "- Computer-Vision (CV)\n",
-    "- Supervised and Unsupervised Learning\n",
-    "- Reinforcement Learning and Genetic Algorithms\n",
-    "- Computational Linguistics\n",
+    "- Computational Linguistics (CL)\n",
     "- Robotics\n",
-    "- etc.\n",
     "\n",
-    "The following Venn diagram shows the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies. The quantities that do not belong to the main category represent techniques that can function as stand-alone techniques and do not necessarily fall into the artificial intelligence group in all cases (for further details see [Emerging technologies based on artificial intelligence to assess quality and consumer preference of beverages](https://www.researchgate.net/publication/336375517_Emerging_technologies_based_on_artificial_intelligence_to_assess_quality_and_consumer_preference_of_beverages))."
+    "The following Venn diagram shows the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies. The quantities that do not belong to the main category represent techniques that can function as stand-alone techniques and do not necessarily fall into the artificial intelligence group in all cases (<cite data-cite=\"AI_beverages_2019\">Gonzalez Viejo et al. 2019</cite>).\n",
+    "\n",
+    "Beispielsweise können einfache robotische Verhaltensmuster über fest vorprogrammierte **if-then-else-Entscheidungen** realisiert werden. Die [Erkennung von Objektkanten](https://en.wikipedia.org/wiki/Edge_detection) in Bildern kann klassischerweise durch die Anwendung z.B. von [Sobel-](https://en.wikipedia.org/wiki/Sobel_operator) oder [Laplace-Filtern](https://en.wikipedia.org/wiki/Laplace_operator) erfolgen. Daher wurde das Venn-Diagramm entsprechend angepasst."
    ]
   },
   {
@@ -6822,7 +6850,7 @@
     "widefigure": false
    },
    "source": [
-    "![Venn diagram showing the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies (source: Kasper, adapted from [Emerging technologies based on artificial intelligence to assess quality and consumer preference of beverages](https://www.researchgate.net/publication/336375517_Emerging_technologies_based_on_artificial_intelligence_to_assess_quality_and_consumer_preference_of_beverages), license: CC BY-SA 4.0)](images/AI_ML_venn_diagram_wide.png)"
+    "![Venn diagram showing the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies (source: Kasper, adapted from <cite data-cite=\"AI_beverages_2019\">Gonzalez Viejo et al. 2019</cite>, license: CC BY-SA 4.0)](images/AI_ML_venn_diagram_wide.png)"
    ]
   },
   {
@@ -6832,7 +6860,7 @@
     "tags": []
    },
    "source": [
-    "### Taxonomy of machine learning\n",
+    "## Taxonomy of machine learning algorithms\n",
     "\n",
     "The field of machine learning can be divided into the following **types of learning**:\n",
     "\n",
@@ -6855,7 +6883,7 @@
    "id": "88c4b891-b2e5-44ac-ad69-896b19b2b6c3",
    "metadata": {},
    "source": [
-    "#### Supervised learning\n",
+    "### Supervised learning\n",
     "\n",
     "The goal of **supervised learning (SL)** is to learn a **function** that maps a **input to an output**, based on example input-output pairs. This involves inferring a relationship describable by a mathematical function from **labeled training data** consisting of a set of training examples (see [Supervised Learning](https://en.wikipedia.org/wiki/Supervised_learning)).\n",
     "\n",
@@ -6875,7 +6903,7 @@
    "id": "ebc7553d-62fb-4288-9349-1852ccc9012b",
    "metadata": {},
    "source": [
-    "#### Unsupervised learning\n",
+    "### Unsupervised learning\n",
     "\n",
     "The algorithms of this category look for internal structures in the data of a dataset, such as **grouping** or **clustering of data points**. These algorithms can thus learn relationships from test data that have not been labeled, classified, or categorized. Rather than responding to feedback (as in supervised learning), unsupervised learning algorithms detect **commonalities in the data** and respond based on the presence or absence of such commonalities in each new dataset (see [Unsupervised learning](https://en.wikipedia.org/wiki/Machine_learning#Unsupervised_learning)).\n",
     "\n",
@@ -6892,7 +6920,7 @@
    "id": "9aa32abe-fc2a-4287-a03e-167a99f39e95",
    "metadata": {},
    "source": [
-    "#### Semi-supervised learning\n",
+    "### Semi-supervised learning\n",
     "\n",
     "This type of learning falls between **unsupervised** learning (without any labeled training data) and **supervised** learning (with completely labeled training data). Some of the training examples are missing training labels, yet many machine-learning researchers have found that unlabeled data, when used in conjunction with a small amount of labeled data, can produce a considerable improvement in learning accuracy (source: [Semi-supervised learning](https://en.wikipedia.org/wiki/Machine_learning#Semi-supervised_learning))."
    ]
@@ -6902,7 +6930,7 @@
    "id": "cafda29d-6e08-4293-bf87-05c8999e54a2",
    "metadata": {},
    "source": [
-    "#### Reinforcement learning\n",
+    "### Reinforcement learning\n",
     "\n",
     "This is an area of machine learning concerned with how **intelligent agents** ought to **take actions in an environment** in order to maximize the notion of cumulative **reward**. Due to its generality, the field is studied in many other disciplines, such as **game theory** and **control theory**.\n",
     "\n",
