--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -565,4 +565,30 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   keywords = {URL},
 }
 
+@article{AI_beverages_2019,
+    author    = {Gonzalez Viejo, Claudia and Torrico, Damir Dennis and Dunshea, Frank Rowland and Fuentes, Sigfredo},
+    date      = {2019-11-01},
+    title     = {Emerging technologies based on artificial intelligence to assess quality and consumer preference of beverages},
+    volume    = {5},
+    journal   = {Beverages},
+    doi       = {10.3390/beverages5040062},
+    url       = {https://www.researchgate.net/publication/336375517_Emerging_technologies_based_on_artificial_intelligence_to_assess_quality_and_consumer_preference_of_beverages},
+    urldate   = {2022-09-21},
+    keywords  = {book},
+}
+
+@TechReport{ISO_IEC_22989_2022-07,
+  author      = {{ISO/IEC 22989}},
+  date        = {2022-07},
+  institution = {ISO/IEC JTC 1/SC 42 - Artificial Intelligence},
+  title       = {Information technology - Artificial intelligence - Artificial intelligence concepts and terminology},
+  language    = {english},
+  url         = {https://webstore.iec.ch/publication/77839},
+  urldate     = {2022-09-21},
+  abstract    = {This document establishes terminology for AI and describes concepts in the field of AI. This document can be used in the development of other standards and in support of communications among diverse, interested parties or stakeholders.},
+  keywords    = {book},
+  owner       = {bk},
+  shorttitle  = {ISO/IEC 22989:2022-07},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
