small changes in STEP 3

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -6773,10 +6773,7 @@
    "cell_type": "markdown",
    "id": "986dc788-5c40-4951-80ed-efa108a50204",
    "metadata": {
-    "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": [
-     "TODO_Step_3"
-    ]
+    "tags": []
    },
    "source": [
     "# STEP 3: Choose and create the ML model\n",
@@ -6802,7 +6799,7 @@
     "\n",
     "The history of **Artificial Intelligence (AI)** with the [Dartmouth Conference](https://en.wikipedia.org/wiki/Dartmouth_workshop) in the summer of 1956 as its birth is characterized by several successive hype and low phases (so-called [AI Winter](https://de.wikipedia.org/wiki/KI-Winter)). During the hype phases, many **new insights** were gathered by AI researchers and interesting **application areas** were explored. However, there were always times when the verifiable successes fell far short of the previously awakened (inflated) expectations. The consequence was then a decreasing interest in AI research and accompanying drastic cuts in research budgets. The **high media attention** in combination with often **vague and not very clear definitions** of AI can be seen as a potential reason for the often circulating inflated expectations of AI technologies.\n",
     "\n",
-    "Due to the increase in knowledge from AI research as well as the exploration of new application areas, the technical terms and especially the AI definitions have been subject to constant change over the past decades. In the currently published standard [ISO/IEC 22989:2022-07](https://webstore.iec.ch/publication/77839), **AI systems** have been defined by **Subcommittee 42 - 'Artificial Intelligence' (SC 42)** of the **ISO/IEC Joint Technical Committee (JTC 1)** as follows <cite data-cite=\"ISO_IEC_22989_2022-07\">ISO/IEC 22989:2022-07</cite>.\n",
+    "Due to the increase in knowledge from AI research as well as the exploration of new application areas, the technical terms and especially the AI definitions have been subject to constant change over the past decades. In the currently published standard [ISO/IEC 22989:2022-07](https://webstore.iec.ch/publication/77839), **AI systems** have been defined by the **Subcommittee 42 - 'Artificial Intelligence' (SC 42)** of the **ISO/IEC Joint Technical Committee (JTC 1)** as follows (see definition 3.1.4 in <cite data-cite=\"ISO_IEC_22989_2022-07\">ISO/IEC 22989:2022-07</cite>).\n",
     "\n",
     "The main part of the **definition** describes what an AI system (should) do:\n",
     "\n",
@@ -6812,7 +6809,7 @@
     "\n",
     "> [..] The engineered system can use various techniques and approaches related to artificial intelligence to develop a **model** to represent data, **knowledge**, processes, etc. which can be used to conduct **tasks**.\n",
     "\n",
-    "The **knowledge** acquires itself from abstracted information about objects, events, concepts or rules as well as their properties and relations to each other. It is organized for purposeful systematic use. The **model** is represented by a physical, mathematical, or otherwise logical representation of a system. Whereas the **task** consists of the action required to achieve a specific goal.\n",
+    "The **knowledge** acquires itself from abstracted information about objects, events, concepts or rules as well as their properties and relations to each other. It is organized for purposeful systematic use. The **model** is represented by a physical, mathematical, or otherwise logical representation of a system. Whereas the **task** consists of a set of actions required to achieve a specific goal.\n",
     "\n",
     "**Machine Learning (ML)** as a subset of AI, on the other hand, addresses the mathematical models and algorithms that enable a computer system to recognize (new) correlations in huge amounts of sample data from various sources by inferring them independently.\n",
     "\n",
@@ -6822,13 +6819,13 @@
     "- Reinforcement Learning and\n",
     "- Genetic Algorithms\n",
     "\n",
-    "that enable computers to learn independently and solve complex problems in the field of, e.g.:\n",
+    "that enable computers to learn independently and solve complex problems in the fields of, e.g.:\n",
     " \n",
-    "- Computer-Vision (CV)\n",
-    "- Computational Linguistics (CL)\n",
-    "- Robotics\n",
+    "- Computer-Vision (CV),\n",
+    "- Computational Linguistics (CL) or\n",
+    "- Robotics.\n",
     "\n",
-    "The following Venn diagram shows the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies. The quantities that do not belong to the main category represent techniques that can function as stand-alone techniques and do not necessarily fall into the artificial intelligence group in all cases (<cite data-cite=\"AI_beverages_2019\">Gonzalez Viejo et al. 2019</cite>).\n",
+    "The following **Venn diagram** shows the relationship between AI, machine learning and other integrated technologies. The quantities that do not belong to the main category represent techniques that can function as stand-alone techniques and do not necessarily fall into the artificial intelligence group in all cases (<cite data-cite=\"AI_beverages_2019\">Gonzalez Viejo et al. 2019</cite>).\n",
     "\n",
     "For example, simple **robotic behaviors** can be realized via fixed pre-programmed **if-then-else decisions**. In images, objects can be identified by [edge detection](https://en.wikipedia.org/wiki/Edge_detection) by applying, for example, [Sobel](https://en.wikipedia.org/wiki/Sobel_operator) or [Laplace filters](https://en.wikipedia.org/wiki/Laplace_operator). In both examples, no learnable algorithms are needed, therefore the Venn diagram was adapted accordingly."
    ]
@@ -6843,7 +6840,7 @@
     "widefigure": false
    },
    "source": [
-    "![Venn diagram showing the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies (source: Kasper, adapted from <cite data-cite=\"AI_beverages_2019\">Gonzalez Viejo et al. 2019</cite>, license: CC BY-SA 4.0)](images/AI_ML_venn_diagram_wide.png)"
+    "![Venn diagram showing the relationship between AI, machine learning and other integrated technologies (source: Kasper, adapted from <cite data-cite=\"AI_beverages_2019\">Gonzalez Viejo et al. 2019</cite>, license: CC BY-SA 4.0)](images/AI_ML_venn_diagram_wide.png)"
    ]
   },
   {
@@ -6977,11 +6974,11 @@
     "\n",
     "The following **reasons** led to the decision for the **Support Vector Classifier (SVC)**:\n",
     "\n",
-    "- the aim is to predict the species using unlabeled test data, so the task is to **classify**\n",
-    "- the iris dataset is **fully labeled** (by designating the iris species)\n",
-    "- the dataset contains significantly **less than 100k samples**\n",
+    "- The aim is to predict the species using unlabeled test data, so the task is to **classify**.\n",
+    "- The iris dataset is **fully labeled** (by designating the iris species).\n",
+    "- The dataset contains significantly **less than 100k samples**.\n",
     "\n",
-    "But the most important reason is that it is **easy to understand** how it works - so it is exactly suitable for a beginner tutorial ;)"
+    "But the most important reason is that it is **easy to understand** how it works - so it is exactly suitable for a beginner tutorial."
    ]
   },
   {
@@ -9230,7 +9227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.6"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
