added literature references to ML taxonomy

--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -50,7 +50,7 @@
 }
 
 @Online{Kaggle_IrisDS,
-  author   = {Srinagar},
+  author   = {Arshid Aslam Baba},
   date     = {2018-03-22},
   title    = {Iris Flower Dataset},
   url      = {https://www.kaggle.com/datasets/arshid/iris-flower-dataset},
@@ -589,6 +589,71 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   keywords    = {book},
   owner       = {bk},
   shorttitle  = {ISO/IEC 22989:2022-07},
+}
+
+@Online{Parameter_tuning_SVC,
+  author   = {Mohtadi Ben Fraj},
+  date     = {2018-05-05},
+  title    = {In Depth: Parameter tuning for SVC},
+  url      = {https://medium.com/all-things-ai/in-depth-parameter-tuning-for-svc-758215394769},
+  language = {English},
+  urldate  = {2022-09-22},
+  keywords = {URL},
+}
+
+@Online{Wiki_SVM,
+  author   = {Wikipedia{: }Support-vector{ }machine},
+  date     = {2022-09-01},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Support-vector machine},
+  url      = {https://en.wikipedia.org/w/index.php?title=Support-vector_machine&oldid=1107938510},
+  urldate  = {2022-09-22},
+}
+
+@Online{Wiki_Supervised_learning,
+  author   = {Wikipedia{: }Supervised{ }learning},
+  date     = {2022-08-31},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Supervised learning},
+  url      = {https://en.wikipedia.org/w/index.php?title=Supervised_learning&oldid=1107692217},
+  urldate  = {2022-09-22},
+}
+
+@Online{Wiki_Unsupervised_learning,
+  author   = {Wikipedia{: }Unsupervised{ }learning},
+  date     = {2022-08-28},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Unsupervised learning},
+  url      = {https://en.wikipedia.org/w/index.php?title=Unsupervised_learning&oldid=1107188105},
+  urldate  = {2022-09-22},
+}
+
+@Online{Wiki_Semi-supervised_learning,
+  author   = {Wikipedia{: }Semi-supervised{ }learning},
+  date     = {2022-09-20},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Semi-supervised learning},
+  url      = {https://en.wikipedia.org/w/index.php?title=Semi-supervised_learning&oldid=1111251364},
+  urldate  = {2022-09-22},
+}
+
+@Online{Wiki_Reinforcement_learning,
+  author   = {Wikipedia{: }Reinforcement{ }learning},
+  date     = {2022-09-16},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Reinforcement learning},
+  url      = {https://en.wikipedia.org/w/index.php?title=Reinforcement_learning&oldid=1110645217},
+  urldate  = {2022-09-22},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
